# internal/handlers/invoke.go
@@ -6,20 +6,26 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+type PredictReq struct {
+	Input string `json:"question"`
+}
+
+type PredictRes struct {
+	A  string `json:"answer"`
+	C1 string `json:"class_1"`
+	C2 string `json:"class_2"`
+}
+
+// @Summary	Предикт ответа на вопрос
+//
+// @Param		input	body PredictReq	true	"input body"
+// @Tags		feedback
+// @Success	200	{object} PredictRes
+// @Failure	500	{object}	InternalError
+// @Router		/predict [post]
 func Predict(cs *chatservice.ChatService) echo.HandlerFunc {
-
-	type request struct {
-		Input string `json:"question"`
-	}
-
-	type response struct {
-		A  string `json:"answer"`
-		C1 string `json:"class_1"`
-		C2 string `json:"class_2"`
-	}
-
 	return func(c echo.Context) error {
-		var req request
+		var req PredictReq
 
 		if err := c.Bind(&req); err != nil {
 			return c.JSON(500, &payload{
@@ -35,7 +41,7 @@ func Predict(cs *chatservice.ChatService) echo.HandlerFunc {
 			})
 		}
 
-		return c.JSON(200, &response{
+		return c.JSON(200, &PredictRes{
 			A:  output.Answer,
 			C1: output.Class1,
 			C2: output.Class2,
